# FPGC

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/instructions/: anti-patterns.instructions.md  assembler.instructions.md  bdos-kernel.instructions.md  brfs.instructions.md  kernel.instructions.md  libfpgc-drivers.instructions.md  shell.instructions.md  tests.instructions.md  toolchain.instructions.md  userbdos.instructions.md  verilog.instructions.md
BuildTools/ASM/: Assembler.py  CompileInstruction.py  code.asm
BuildTools/ASMPY/: Makefile  README.md  pyproject.toml
BuildTools/ASMPY/asmpy/: app.py  asmpy.py  assembler.py  linker.py  logger.py  models.py  preprocessor.py  utils.py
BuildTools/ASMPY/asmpy/models/: __init__.py  assembly_line.py  data_types.py  preprocessor.py
BuildTools/ASMPY/tests/unit/asmpy/: test_app.py  test_assembler.py  test_instruction_coverage.py  test_instructions.py  test_isa_spec.py  test_logger.py  test_models.py  test_preprocessor.py  test_utils.py
BuildTools/ASM_deprecated/: Assembler.py  CompileInstruction.py
BuildTools/B32CC/: Makefile  Readme.md  cgb32p2.inc  cgb32p3.inc  cgmips.c  smlrc.c
BuildTools/QBE/: Makefile  all.h  emit.c  fold.c  load.c  main.c  mem.c  ops.h  parse.c  qbe  rega.c  simpl.c  spill.c  util.c
BuildTools/Utils/: convert_to_256_bit.py
BuildTools/cproc/: Makefile  cc.h  config.h  decl.c  driver.c  eval.c  expr.c  main.c  ops.h  qbe.c  scope.c  targ.c  type.c
Docs/: mkdocs.yml
Docs/context/: BDOS-context.md  Project-context.md  fpgc-camera-context.md  term-context.md
Docs/docs/: .pages  index.md
Hardware/PCB/: FPGC-CycloneIV-AIO.eprj
Hardware/Verilog/: FPGC6.v
Hardware/Vivado/: FPGC.xpr
Scripts/ASM/: compile_bare_metal_asm.sh  compile_bootloader.sh  compile_uart_bootloader.sh  cpu_tests.py
Scripts/BCC/: cc-min.sh  cc.sh  compile_bare_metal_c.sh  compile_bdos.sh  compile_modern_c.sh  compile_user_bdos.sh  hello.c  libc-build.sh
Scripts/BDOS/: sd_read_brfs.py  sd_write_brfs.py
Scripts/Docs/: deploy.sh  run.sh
Scripts/Graphics/: convert_textures.py  order_time.sh
Scripts/Programmer/: bin2flash.py  flash_bdos.sh  flash_spi.sh  fnp_debug_capture.py
Scripts/Simulation/: convert_to_256_bit.py  convert_to_8_bit.sh  simulate_cpu.sh  simulate_fpgc.sh  simulate_gpu.sh  simulate_mig7mock.sh  simulate_sdram.sh  simulate_sram_pixel.sh
Scripts/Tests/: asm_link_tests.py  b32cc_tests.py  b32p3_tests.py  c_tests.py  compare_cpus.py  cpp_tests.py  cpu_tests.py  debug_b32cc_test.sh  debug_b32p3_test.sh  debug_cpu_test.sh  quartus_compile.tcl  quartus_timing.sh  quartus_timing.tcl  run_b32cc_tests.sh  run_b32p3_tests.sh  run_c_tests.sh  run_cpu_tests.sh  (+7 more)
(+1453 files in other folders)
