[project]
name = "fpgc"
version = "0.1.0"
description = "Environment for running FPGC tools and scripts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitstring>=4.3.1",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "numpy>=2.3.1",
    "pillow>=11.2.1",
    "pyserial>=3.5",
    "ruff>=0.12.1",
    "tqdm>=4.67.1",
]
